# Tactile-Skin

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
ROS2/block_position_prediction/: __init__.py
ROS2/ros_ws/ros_src/tactile_interfaces/: CMakeLists.txt  package.xml
ROS2/ros_ws/ros_src/tactile_interfaces/msg/: ArmCommand.msg  ArmState.msg  BlockDetection.msg  TaskCommand.msg  TaskState.msg
ROS2/ros_ws/ros_src/tactile_interfaces/srv/: GetTactilePose.srv  ListArmPorts.srv
ROS2/tactile_src/: python_visualiser.py
custom_libs/8pinfpc.pretty/: FH12-8S-0.5SH_55_.kicad_sym  HIROSE_FH12-8S-0.5SH_55_.kicad_mod
custom_libs/AD7142.pretty/: QFN50P500X500X100-33N.step
hardware/pcb/: .gitignore
include/: matrix_scan.h  stm32f4xx_hal_conf.h  tactile_proc.h  usbd_conf.h
main/: CMakeLists.txt  main.cpp  matrix_scan.c  matrix_scan.h  tactile_proc.c  tactile_proc.h
pcb/: tactileskin.kicad_pcb
pcb/v1/: connectors.kicad_sch  fp-lib-table  mcu.kicad_sch  power.kicad_sch  tactileskin.kicad_pro  tactileskin.kicad_sch
pcb/v1.0/: tactileskin.kicad_prl
pcb/v1.1/: tactileskin.kicad_pcb  tactileskin.kicad_prl  tactileskin.kicad_pro
pcb/v1.2/: tactileskin.kicad_prl  tactileskin.kicad_pro
pcb/v1.3/: sym-lib-table  tactileskin.kicad_pcb  tactileskin.kicad_pro
ros_ws/: README.md
ros_ws/ros_src/: GPT.md  README.md
ros_ws/ros_src/tactile_bringup/: package.xml
ros_ws/ros_src/tactile_bringup/config/: system.yaml
ros_ws/ros_src/tactile_bringup/launch/: system.launch.py
src/: main.cpp  matrix_scan.c  matrix_scan.h  tactile_proc.c  usb_config.c
tools/common/: config.cpp  config.hpp  processor.hpp
tools/raw-streaming/: .gitignore  (+2 more)
(+263 files in other folders)
