<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tactile_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration for the tactile block picking system.</description>
  <maintainer email="jay@todo.todo">jay</maintainer>
  <license>TODO</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>tactile_arm</depend>
  <depend>tactile_task</depend>
  <depend>tactile_ui</depend>
  <depend>tactile_vision</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
